@@ -255,6 +255,7 @@ Instant Messaging Freedom, Inc.
 Vitaliy Ischenko
 Intel Corporation
 Andrew Ivanov
+Momchil Ivanov
 Scott Jackson
 Hans Petter Jansson
 David Jedelsky
